--- a/docs/module.html.jinja2
+++ b/docs/module.html.jinja2
@@ -38,3 +38,9 @@
   </script>
 
 {% endblock %}
+
+{#{% block nav_footer %}#}
+{#  <footer>My Package v{{ env["VERSION"] | default("1.0") }}</footer>#}
+{#{% endblock %}#}
+
+{#{% block attribution %}{% endblock %}#}
